--- a/PTB-XL_DATA.ipynb
+++ b/PTB-XL_DATA.ipynb
@@ -2389,26 +2389,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Patrick Wagner, Nils Strodthoff, Ralf-Dieter Bousseljot, Dieter Kreiseler, Fatima I.Lunze, Wojciech Samek, and Tobias Schaeffter. Ptb-xl, a large publicly available electrocardiography dataset. Scientific Data, 7(1):1–15, 2020.\n",
+    "1\\. Patrick Wagner, Nils Strodthoff, Ralf-Dieter Bousseljot, Dieter Kreiseler, Fatima I.Lunze, Wojciech Samek, and Tobias Schaeffter. Ptb-xl, a large publicly available electrocardiography dataset. Scientific Data, 7(1):1–15, 2020.\n",
     "\n",
     "\n",
-    "2. Victor Moskalenko, Nikolai Zolotykh, and Grigory Osipov. Deep learning for ecg segmentation. In International Conference on Neuroinformatics, pages 246–254. Springer, 2019.\n",
+    "2\\. Victor Moskalenko, Nikolai Zolotykh, and Grigory Osipov. Deep learning for ecg segmentation. In International Conference on Neuroinformatics, pages 246–254. Springer, 2019.\n",
     "\n",
     "\n",
-    "3. Kachuee Mohammad and Fazeli Shayan and Sarrafzadeh Majid. Ecg heartbeat classification: A deep transferable representation. 2018 IEEE International Conference on Healthcare Informatics (ICHI), pages 443-444. IEEE, 2018.\n",
+    "3\\. Kachuee Mohammad and Fazeli Shayan and Sarrafzadeh Majid. Ecg heartbeat classification: A deep transferable representation. 2018 IEEE International Conference on Healthcare Informatics (ICHI), pages 443-444. IEEE, 2018.\n",
     "\n",
     "\n",
-    "4. Feng Kai. Myocardial infarction classification based on convolutional neural network and recurrent neural network. Applied Sciences, 9(9):1879, 2019\n",
+    "4\\. Feng Kai. Myocardial infarction classification based on convolutional neural network and recurrent neural network. Applied Sciences, 9(9):1879, 2019\n",
     "\n",
     "\n",
-    "5. Nils Strodthoff and Claas Strodthoff. Detecting and interpreting myocardial infarction using fully convolutional neural networks. Physiological measurement, 20(1):015001, 2019.\n",
+    "5\\. Nils Strodthoff and Claas Strodthoff. Detecting and interpreting myocardial infarction using fully convolutional neural networks. Physiological measurement, 20(1):015001, 2019.\n",
     "\n",
     "\n",
-    "6. World Health Organization. Fight cardiovascular disease. 2018. URL https://www.who.int/cardiovascular_diseases/ru/.\n",
+    "6\\. World Health Organization. Fight cardiovascular disease. 2018. URL https://www.who.int/cardiovascular_diseases/ru/.\n",
     "\n",
     "\n",
-    "7. ISO Central Secretary, “Health informatics – Standard communication protocol – Part 91064: Computer-assisted electrocardiography,” International Organization for Standardization, Geneva, CH, Standard ISO 11073-91064:2009, 2009."
+    "7\\. ISO Central Secretary, “Health informatics – Standard communication protocol – Part 91064: Computer-assisted electrocardiography,” International Organization for Standardization, Geneva, CH, Standard ISO 11073-91064:2009, 2009."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
