--- a/PTB-XL_DATA.ipynb
+++ b/PTB-XL_DATA.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "source": [
     "С помощью функции `load_raw_data` и модуля *wfdb* загрузим данные сигнала в виде numpy.array и сохраним в *X*. В *Y* будем хранить набор данных PTB-XL.\n",
-    "С помощью функции aggregate_diagnostic достанем из класса *scp_codes*, который представлен в виде словаря, список суперклассов. "
+    "С помощью функции aggregate_diagnostic достанем из признака *scp_codes*, который представлен в виде словаря, список суперклассов. "
    ]
   },
   {
@@ -841,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Заменим значения `nan` в классах *weight*, *height*, *age* на `-1`, а в классах *infarction_stadium1*, *infarction_stadium2*, на `Healthy`."
+    "Заменим значения `nan` в признаках *weight*, *height*, *age* на `-1`, а в признаках *infarction_stadium1*, *infarction_stadium2*, на `Healthy`."
    ]
   },
   {
@@ -1002,7 +1002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Соединим две таблицы с данными сигнала и данными о пациентах, чтобы добавить классы *age*, *sex*, *height*, *weight*."
+    "Соединим две таблицы с данными сигнала и данными о пациентах, чтобы добавить признаки *age*, *sex*, *height*, *weight*."
    ]
   },
   {
@@ -1802,7 +1802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Изначально данные разделены на 10 групп. Разделим данные на тренировочный и тестовый набор по классу `strat_fold`. "
+    "Изначально данные разделены на 10 групп. Разделим данные на тренировочный и тестовый набор по признаку `strat_fold`. "
    ]
   },
   {
@@ -2409,13 +2409,6 @@
     "\n",
     "7\\. ISO Central Secretary, “Health informatics – Standard communication protocol – Part 91064: Computer-assisted electrocardiography,” International Organization for Standardization, Geneva, CH, Standard ISO 11073-91064:2009, 2009."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
